--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     
 <header>
     <nav class="navbar">
+        <div class="logo"><a href="index.html"><h1>LH.</h1></a></div>
         <ul class="nav_list" id="navi-list">
-            <li><a href="index.html">Forside</a></li>
             <li><a href="projekter.html">Projekter</a></li>
             <li><a href="ommig.html">Om mig</a></li>
         </ul>
@@ -30,10 +30,10 @@
 <main>
     <div class="grid1">
         <div class="grid1_img">
-            <a href="#"><img src="img/websitemockup_WEB.webp" width="600" height="600" alt=""></a>
+            <img src="img/websitemockup_WEB.webp" width="600" height="600" alt="">
         </div>
         <div class="grid1_text1">
-            <h2><span class="light"><span class="grey">1. semester, KEA copenhagen.</span></span><br> 01. grundlæggende web.</h2>
+            <h2><span class="light"><span class="grey">1. semester, KEA copenhagen.</span></span> 01. grundlæggende web.</h2>
         </div>
         <div class="grid1_text2">
             <p>På første tema, skulle vi starte med et meget simpel website, hvor layoutet allerede var bestemt for os. Vi fik tildelt
@@ -42,10 +42,10 @@
             <a href="https://lineheight.dk/kea/02_web/04_responsive/responsive_v2/"><button>grundlæggende web.</button></a>
         </div>
         <div class="grid1_img">
-            <a href="#"><img src="img/websitemockup_UX.webp" width="600" height="600" alt=""></a>
+            <img src="img/websitemockup_UX.webp" width="600" height="600" alt="">
         </div>
         <div class="grid1_text1">
-            <h2><span class="light"><span class="grey">1. semester, KEA copenhagen.</span></span><br>02. grundlæggende UX.</h2>
+            <h2><span class="light"><span class="grey">1. semester, KEA copenhagen.</span></span> 02. grundlæggende UX.</h2>
         </div>
         <div class="grid1_text2">
             <p>På dette tema skulle vi designe en webshop som skulle sælge t-shirts. Vi havde helt frier tøjler med design og idé. 
@@ -55,10 +55,10 @@
         </div>
 
         <div class="grid1_img">
-            <a href="#"><img src="img/websitemockup_ANI.webp" width="600" height="600" alt=""></a>
+            <img src="img/websitemockup_ANI.webp" width="600" height="600" alt="">
         </div>
         <div class="grid1_text1">
-            <h2><span class="light"><span class="grey">1. semester, KEA copenhagen.</span></span><br>03. grundlæggende animation.</h2>
+            <h2><span class="light"><span class="grey">1. semester, KEA copenhagen.</span></span> 03. grundlæggende animation.</h2>
         </div>
         <div class="grid1_text2">
             <p>3. tema blev en smule mere kompliceret og indviklet. Det var første gang vi skulle rodde med JavaScript. Vi skulle kode et simpelt spil.
@@ -69,10 +69,10 @@
         </div>
 
         <div class="grid1_img">
-            <a href="#"><img src="img/websitemockup_IND.webp" width="600" height="600" alt=""></a>
+            <img src="img/websitemockup_IND.webp" width="600" height="600" alt="">
         </div>
         <div class="grid1_text1">
-            <h2><span class="light"><span class="grey">1. semester, KEA copenhagen.</span></span><br>04. grundlæggende indhold.</h2>
+            <h2><span class="light"><span class="grey">1. semester, KEA copenhagen.</span></span> 04. grundlæggende indhold.</h2>
         </div>
         <div class="grid1_text2">
             <p>Her startede vores første "store gruppeopgave". Vi skulle også for første gang lave noget for en virkelig virksomhed. Vi skulle
