--- a/projekter.html
+++ b/projekter.html
@@ -12,8 +12,8 @@
     
 <header>
     <nav class="navbar">
+        <div class="logo"><a href="index.html"><h1>LH.</h1></a></div>
         <ul class="nav_list" id="navi-list">
-            <li><a href="index.html">Forside</a></li>
             <li><a href="projekter.html">Projekter</a></li>
             <li><a href="ommig.html">Om mig</a></li>
         </ul>
