--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
 </header>
 
-<main>
+<main> 
     <div class="grid1">
         <div class="grid1_img">
             <img src="img/websitemockup_WEB.webp" width="600" height="600" alt="">
@@ -39,7 +39,7 @@
             <p>På første tema, skulle vi starte med et meget simpel website, hvor layoutet allerede var bestemt for os. Vi fik tildelt
             en stil, som vi skulle følge, og vi kunne selv bestemme emne, farver og billedestil.
             </p>
-            <a href="https://lineheight.dk/kea/02_web/04_responsive/responsive_v2/"><button>grundlæggende web.</button></a>
+            <a href="https://lineheight.dk/kea/02_web/04_responsive/responsive_v2/" target="_blank"> </a><button>grundlæggende web.</button></a>
         </div>
         <div class="grid1_img">
             <img src="img/websitemockup_UX.webp" width="600" height="600" alt="">
@@ -51,7 +51,7 @@
             <p>På dette tema skulle vi designe en webshop som skulle sælge t-shirts. Vi havde helt frier tøjler med design og idé. 
             Vi skulle arbejde med en masse forskellige sketch-metoder, tests af prototyper, og fremlægge vores første "pitch".
             </p>
-            <a href="https://xd.adobe.com/view/4a1db0b0-ee0f-43ef-8a7e-de74357832f0-1f4e/"><button>grundlæggende UX.</button></a>
+            <a href="https://xd.adobe.com/view/4a1db0b0-ee0f-43ef-8a7e-de74357832f0-1f4e/" target="_blank"> </a><button>grundlæggende UX.</button></a>
         </div>
 
         <div class="grid1_img">
@@ -65,7 +65,7 @@
             Selve emnet omkring spillet og stilen var op til os, men vi skulle selv tegne alt grafik. Vi skulle også lave et website, til at præsentere
             spillet.
             </p>
-            <a href="https://lineheight.dk/kea/04_animation/spil/"><button>grundlæggende animation.</button></a>
+            <a href="https://lineheight.dk/kea/04_animation/spil/" target="_blank"><button>grundlæggende animation.</button></a>
         </div>
 
         <div class="grid1_img">
@@ -79,7 +79,7 @@
             redesigne en allerede lavet hjemmeside, som måske godt kunne trænge til noget nyt og friskt. Vi skulle mødes med virksomheden, tage billeder og video,
             og kode 4 sider, én til hver i gruppen.
             </p>
-            <a href="https://line562a.github.io/blomstersoestrene/"><button>grundlæggende indhold.</button></a>
+            <a href="https://line562a.github.io/blomstersoestrene/" target="_blank"><button>grundlæggende indhold.</button></a>
         </div>
     </div>
 </main>
