--- a/ommig.html
+++ b/ommig.html
@@ -28,20 +28,19 @@
 </header>
 
 <div class="intro">
-    <div class="profilbillede">
+    <div class="profilbillede"><img src="img/profilbillede_round.webp" height="700" width="700" alt="Line Holm Ræbild Jespersen, multimediedesigner studerende på KEA, 1. semester">
     </div>
     <div class="intro_text">
         <h1><span class="darkgreen">Line Holm </span><span class="light"><span class="darkgrey">Jespersen</span></span></h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum justo quis mi tempor, eget 
         sodales nisl consequat. Fusce semper nulla eu ex venenatis volutpat. Maecenas a fringilla leo. Proin est augue, 
+        condimentum blandit sem vitae, porttitor ultricies dolor. Maecenas a fringilla leo. Proin est augue,
         condimentum blandit sem vitae, porttitor ultricies dolor.
         </p>
-    </div>
-    <div class="portfolio">
         <h3>Portfolio, multimediedesigner <br><span class="light">1. semester, KEA.</span></h3>
-        <a href="https://www.facebook.com/linehrjespersen"><img src="img/facebook.svg" width="20" height="20" alt=""></a>
-        <a href="https://www.instagram.com/linejesper/"><img src="img/instagram.svg" width="20" height="20" alt=""></a>
-        <a href="https://www.linkedin.com/in/line-h-437bba123/"><img src="img/linkedin.svg" width="20" height="20" alt=""></a>
+        <a href="https://www.facebook.com/linehrjespersen" target="_blank"><img class="icons" src="img/facebook.svg" width="20" height="20" alt=""></a>
+        <a href="https://www.instagram.com/linejesper/" target="_blank"><img class="icons" src="img/instagram.svg" width="20" height="20" alt=""></a>
+        <a href="https://www.linkedin.com/in/line-h-437bba123/" target="_blank"><img class="icons" src="img/linkedin.svg" width="20" height="20" alt=""></a>
     </div>
 </div>
 
