--- a/ommig.html
+++ b/ommig.html
@@ -31,7 +31,8 @@
     <div class="profilbillede"><img src="img/profilbillede_round.webp" height="700" width="700" alt="Line Holm Ræbild Jespersen, multimediedesigner studerende på KEA, 1. semester">
     </div>
     <div class="intro_text">
-        <h1><span class="darkgreen">Line Holm </span><span class="light"><span class="darkgrey">Jespersen</span></span></h1>
+        <p>Hejsa, mit navn er</p>
+        <h1><span class="darkgreen">Line </span><span class="darkgrey">Jespersen</span></h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum justo quis mi tempor, eget 
         sodales nisl consequat. Fusce semper nulla eu ex venenatis volutpat. Maecenas a fringilla leo. Proin est augue, 
         condimentum blandit sem vitae, porttitor ultricies dolor. Maecenas a fringilla leo. Proin est augue,
