--- a/ommig.html
+++ b/ommig.html
@@ -32,13 +32,13 @@
     </div>
     <div class="intro_text">
         <p>Hejsa, mit navn er</p>
-        <h1><span class="darkgreen">Line </span><span class="darkgrey">Jespersen</span></h1>
+        <h1><span class="darkgreen">Line Holm </span><span class="darkgrey">Jespersen</span></h1>
+        <h2>22 årig studerende fra KEA, som er begejstret for design & grafik - velkommen til!</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum justo quis mi tempor, eget 
         sodales nisl consequat. Fusce semper nulla eu ex venenatis volutpat. Maecenas a fringilla leo. Proin est augue, 
         condimentum blandit sem vitae, porttitor ultricies dolor. Maecenas a fringilla leo. Proin est augue,
         condimentum blandit sem vitae, porttitor ultricies dolor.
         </p>
-        <h3>Portfolio, multimediedesigner <br><span class="light">1. semester, KEA.</span></h3>
         <a href="https://www.facebook.com/linehrjespersen" target="_blank"><img class="icons" src="img/facebook.svg" width="20" height="20" alt=""></a>
         <a href="https://www.instagram.com/linejesper/" target="_blank"><img class="icons" src="img/instagram.svg" width="20" height="20" alt=""></a>
         <a href="https://www.linkedin.com/in/line-h-437bba123/" target="_blank"><img class="icons" src="img/linkedin.svg" width="20" height="20" alt=""></a>
