--- a/ommig.html
+++ b/ommig.html
@@ -23,16 +23,15 @@
             <div class="menu_line"></div>
             <div class="menu_line"></div>
         </div>
-    
     </nav>
 </header>
 
 <div class="intro">
-    <div class="profilbillede"><img src="img/profilbillede_round.webp" height="700" width="700" alt="Line Holm Ræbild Jespersen, multimediedesigner studerende på KEA, 1. semester">
+    <div class="profilbillede"><img src="img/emoji1.png" height="600" width="600" alt="Line Holm Ræbild Jespersen, multimediedesigner studerende på KEA, 1. semester">
     </div>
     <div class="intro_text">
         <p>Hejsa, mit navn er</p>
-        <h1><span class="darkgreen">Line Holm </span><span class="darkgrey">Jespersen</span></h1>
+        <h1>Line Holm Jespersen</h1>
         <h2>22 årig studerende fra KEA, som er begejstret for design & grafik - velkommen til!</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum justo quis mi tempor, eget 
         sodales nisl consequat. Fusce semper nulla eu ex venenatis volutpat. Maecenas a fringilla leo. Proin est augue, 
