--- a/projekter.html
+++ b/projekter.html
@@ -23,63 +23,69 @@
             <div class="menu_line"></div>
             <div class="menu_line"></div>
         </div>
-    
     </nav>
 </header>
 
 <main>
     <div class="grid1">
         <div class="grid1_img">
-            <a href="#"><img src="img/websitemockup_WEB.webp" width="600" height="600" alt=""></a>
+            <img src="img/websitemockup_WEB.webp" width="600" height="600" alt="">
         </div>
-        <div class="grid1_text1">
-            <h2><span class="light"><span class="grey">1. semester, KEA copenhagen.</span></span><br> 01. grundlæggende web.</h2>
-        </div>
-        <div class="grid1_text2">
-            <p>På første tema, skulle vi starte med et meget simpel website, hvor layoutet allerede var bestemt for os. Vi fik tildelt
-            en stil, som vi skulle følge, og vi kunne selv bestemme emne, farver og billedestil.
+
+        <div class="grid1_text">
+            <h2>Grundlæggende web.</h2>
+            <h3>1. Semester, KEA København.</h3>
+            <p>På første tema, skulle vi starte med et meget simpel website, hvor layoutet allerede var bestemt for os.
+                Vi fik tildelt
+                en stil, som vi skulle følge, og vi kunne selv bestemme emne, farver og billedestil.
             </p>
-            <button>Grundlæggende web.</button>
-        </div>
-        <div class="grid1_img">
-            <a href="#"><img src="img/websitemockup_UX.webp" width="600" height="600" alt=""></a>
-        </div>
-        <div class="grid1_text1">
-            <h2><span class="light"><span class="grey">1. semester, KEA copenhagen.</span></span><br>02. grundlæggende UX.</h2>
-        </div>
-        <div class="grid1_text2">
-            <p>På dette tema skulle vi designe en webshop som skulle sælge t-shirts. Vi havde helt frier tøjler med design og idé. 
-            Vi skulle arbejde med en masse forskellige sketch-metoder, tests af prototyper, og fremlægge vores første "pitch".
-            </p>
-            <button>Grundlæggende UX.</button>
+            <p><a href="https://lineheight.dk/kea/02_web/04_responsive/responsive_v2/" target="_blank">Se hele projektet
+                    her..</a></p>
         </div>
 
         <div class="grid1_img">
-            <a href="#"><img src="img/websitemockup_ANI.webp" width="600" height="600" alt=""></a>
-        </div>
-        <div class="grid1_text1">
-            <h2><span class="light"><span class="grey">1. semester, KEA copenhagen.</span></span><br>03. grundlæggende animation.</h2>
+            <img src="img/websitemockup_UX.webp" width="600" height="600" alt="">
         </div>
         <div class="grid1_text2">
-            <p>3. tema blev en smule mere kompliceret og indviklet. Det var første gang vi skulle rodde med JavaScript. Vi skulle kode et simpelt spil.
-            Selve emnet omkring spillet og stilen var op til os, men vi skulle selv tegne alt grafik. Vi skulle også lave et website, til at præsentere
-            spillet.
+            <h2>Grundlæggende UX.</h2>
+            <h3>1. Semester, KEA København.</h3>
+            <p>På dette tema skulle vi designe en webshop som skulle sælge t-shirts. Vi havde helt frier tøjler med
+                design og idé.
+                Vi skulle arbejde med en masse forskellige sketch-metoder, tests af prototyper, og fremlægge vores
+                første "pitch".
             </p>
-            <button>Grundlæggende animation.</button>
+            <p><a href="https://xd.adobe.com/view/4a1db0b0-ee0f-43ef-8a7e-de74357832f0-1f4e/" target="_blank">Se hele
+                    projektet her..</a></p>
         </div>
 
         <div class="grid1_img">
-            <a href="#"><img src="img/websitemockup_IND.webp" width="600" height="600" alt=""></a>
+            <img src="img/websitemockup_ANI.webp" width="600" height="600" alt="">
         </div>
-        <div class="grid1_text1">
-            <h2><span class="light"><span class="grey">1. semester, KEA copenhagen.</span></span><br>04. grundlæggende indhold.</h2>
+        <div class="grid1_text">
+            <h2>Grundlæggende animation.</h2>
+            <h3>1. Semester, KEA København.</h3>
+            <p>3. tema blev en smule mere kompliceret og indviklet. Det var første gang vi skulle rodde med JavaScript.
+                Vi skulle kode et simpelt spil.
+                Selve emnet omkring spillet og stilen var op til os, men vi skulle selv tegne alt grafik. Vi skulle også
+                lave et website, til at præsentere
+                spillet.
+            </p>
+            <p><a href="https://lineheight.dk/kea/04_animation/spil/" target="_blank">Se hele projektet her..</a></p>
+        </div>
+
+        <div class="grid1_img">
+            <img src="img/websitemockup_IND.webp" width="600" height="600" alt="">
         </div>
         <div class="grid1_text2">
-            <p>Her startede vores første "store gruppeopgave". Vi skulle også for første gang lave noget for en virkelig virksomhed. Vi skulle
-            redesigne en allerede lavet hjemmeside, som måske godt kunne trænge til noget nyt og friskt. Vi skulle mødes med virksomheden, tage billeder og video,
-            og kode 4 sider, én til hver i gruppen.
+            <h2>Grundlæggende indhold.</h2>
+            <h3>1. Semester, KEA København.</h3>
+            <p>Her startede vores første "store gruppeopgave". Vi skulle også for første gang lave noget for en virkelig
+                virksomhed. Vi skulle
+                redesigne en allerede lavet hjemmeside, som måske godt kunne trænge til noget nyt og friskt. Vi skulle
+                mødes med virksomheden, tage billeder og video,
+                og kode 4 sider, én til hver i gruppen.
             </p>
-            <button>Grundlæggende indhold.</button>
+            <p><a href="https://line562a.github.io/blomstersoestrene/" target="_blank">Se hele projektet her..</a></p>
         </div>
     </div>
 </main>
