--- a/ommig.html
+++ b/ommig.html
@@ -14,7 +14,10 @@
     <nav class="navbar">
         <div class="logo"><a href="index.html"><h1>LH.</h1></a></div>
         <ul class="nav_list" id="navi-list">
-            <li><a href="projekter.html">Projekter</a></li>
+            <li><a href="web.html">01. Web</a></li>
+            <li><a href="ux.html">02. UX</a></li>
+            <li><a href="animation.html">03. Animation</a></li>
+            <li><a href="index.html">04. Indhold</a></li>
             <li><a href="ommig.html">Om mig</a></li>
         </ul>
      
