--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="web.html">01. Web</a></li>
             <li><a href="ux.html">02. UX</a></li>
             <li><a href="animation.html">03. Animation</a></li>
-            <li><a href="index.html">04. Indhold</a></li>
+            <li><a href="indhold.html">04. Indhold</a></li>
             <li><a href="ommig.html">Om mig</a></li>
         </ul>
      
@@ -31,6 +31,15 @@
 
 <main>
     <div class="hero">
+            <div class="hero_text">
+            <p>Hejsa, velkommen til mit</p>
+            <h1>Portfolio</h1>
+            <h2>Indtil videre kan du se de projeker jeg har lavet på 1. semester af min multimediedesigner-uddannelse på KEA.</h2>
+            <p>Lige under her finder du en kort opsummering af de 4 temaer vi har været igennem, og hvis du/I har lyst til at læse mere, er der flere billeder og beskrevet en smule mere 
+            detaljeret omkring de enklete emner.
+            </p>
+            <p><a href="ommig.html">Ellers kan du læse mere om mig lige her!</a></p>
+        </div>
     </div>
 
     <div class="grid1">
