--- a/indhold.html
+++ b/indhold.html
@@ -17,7 +17,7 @@
             <li><a href="web.html">01. Web</a></li>
             <li><a href="ux.html">02. UX</a></li>
             <li><a href="animation.html">03. Animation</a></li>
-            <li><a href="index.html">04. Indhold</a></li>
+            <li><a href="indhold.html">04. Indhold</a></li>
             <li><a href="ommig.html">Om mig</a></li>
         </ul>
      
