--- a/animation.html
+++ b/animation.html
@@ -16,7 +16,7 @@
         <ul class="nav_list" id="navi-list">
             <li><a href="web.html">01. Web</a></li>
             <li><a href="ux.html">02. UX</a></li>
-            <li><a href="animation.html">03. Animation</a></li>
+            <li><a href="animation.html"><span class="bold">03. Animation</span></a></li>
             <li><a href="indhold.html">04. Indhold</a></li>
             <li><a href="ommig.html">Om mig</a></li>
         </ul>
@@ -30,7 +30,28 @@
 </header>
 
 <main>
-    <div class="hero">
+    <div class="grid2">
+        <div class="grid2_container">
+            <img src="img/peeace_mockup.webp" width="600" height="600" alt="iPhone mockup med Peaace">
+        </div>
+        <div class="grid2_text">
+            <h2>Hvor har jeg fundet inspiration?</h2>
+            <h3>Designer & illustrator Peeace</h3>
+            <p>På dette tema skulle vi vælge en stil vi skulle basere vores spil på. Jeg valgte en artist jeg fandt på Instagram/Dribbble, som hedder Peeace. 
+            Han laver en del fine og retro designs med gode kontrastfarver og et budskab. Jeg synes det passede rigtig fint, til den vibe jeg gerne ville bruge.
+            </p>
+            <p><a href="https://www.instagram.com/peeaceworks/" target="_blank">Se hans Instagram her..</a></p>
+        </div>
+
+        <div class="grid2_text">
+            <h2>Skitser & start-fasen</h2>
+            <h3>Tegnet i ProCreate på iPad</h3>
+            <p>Det hele startede således ud, og derefter blev det konveret direkte til Illustrator, hvor jeg så rentegnede alle elementerne, som skulle bruges i spillet.
+            </p>
+        </div>
+        <div class="grid2_container">
+            <img src="img/animation_skitser.webp" width="1000" height="600" alt="iPhone mockup med Peaace">
+        </div>
     </div>
 </main>
 
