--- a/index.html
+++ b/index.html
@@ -51,11 +51,9 @@
             <h2>Grundlæggende web.</h2>
             <h3>1. Semester, KEA København.</h3>
             <p>På første tema, skulle vi starte med et meget simpel website, hvor layoutet allerede var bestemt for os.
-                Vi fik tildelt
-                en stil, som vi skulle følge, og vi kunne selv bestemme emne, farver og billedestil.
+            Vi fik tildelt en stil, som vi skulle følge, og vi kunne selv bestemme emne, farver og billedestil.
             </p>
-            <p><a href="https://lineheight.dk/kea/02_web/04_responsive/responsive_v2/" target="_blank">Se hele projektet
-                    her..</a></p>
+            <p><a href="https://lineheight.dk/kea/02_web/04_responsive/responsive_v2/" target="_blank">Se hele projektether..</a></p>
         </div>
     
         <div class="grid1_img">
