--- a/ommig.html
+++ b/ommig.html
@@ -18,7 +18,7 @@
             <li><a href="ux.html">02. UX</a></li>
             <li><a href="animation.html">03. Animation</a></li>
             <li><a href="indhold.html">04. Indhold</a></li>
-            <li><a href="ommig.html">Om mig</a></li>
+            <li><a href="ommig.html"><span class="bold">Om mig</span></a></li>
         </ul>
      
         <div class="menu" id="toggle-button">
