--- a/ux.html
+++ b/ux.html
@@ -15,7 +15,7 @@
         <div class="logo"><a href="index.html"><h1>LH.</h1></a></div>
         <ul class="nav_list" id="navi-list">
             <li><a href="web.html">01. Web</a></li>
-            <li><a href="ux.html">02. UX</a></li>
+            <li><a href="ux.html"><span class="bold">02. UX</span></a></li>
             <li><a href="animation.html">03. Animation</a></li>
             <li><a href="indhold.html">04. Indhold</a></li>
             <li><a href="ommig.html">Om mig</a></li>
