--- a/web.html
+++ b/web.html
@@ -16,7 +16,7 @@
     <nav class="navbar">
         <div class="logo"><a href="index.html"><h1>LH.</h1></a></div>
         <ul class="nav_list" id="navi-list">
-            <li><a href="web.html">01. Web</a></li>
+            <li><a href="web.html"><span class="bold">01. Web</span></a></li>
             <li><a href="ux.html">02. UX</a></li>
             <li><a href="animation.html">03. Animation</a></li>
             <li><a href="indhold.html">04. Indhold</a></li>
@@ -31,15 +31,12 @@
     </nav>
 </header>
 
-    <main>
-        <div class="hero">
-        </div>
-    </main>
+<main>
+</main>
+<footer>
+</footer>
 
-    <footer>
-    </footer>
-
-    <script src="js/script.js"></script>
+<script src="js/script.js"></script>
 </body>
 
 </html>
