--- a/indhold.html
+++ b/indhold.html
@@ -30,7 +30,59 @@
 </header>
 
 <main>
-    <div class="hero">
+    <div class="grid2">
+        <div class="grid2_text">
+            <p>04. Grundlæggende indhold, "Ida Brockmann"</p>
+            <h2>Pilotsite med Ida Brockmann</h2>
+            <h3>→ En lille øver med videoer</h3>
+            <p>Som den første del, skulle vi lege en smule med video og video på web. Så derfor filmede og interviewede vi Ida
+                Brockmann som er en kunstner som lige for tiden
+                gik meget op i marmorering.
+            </p>
+            <p><a href="https://line562a.github.io/pilotsite/" target="_blank">Se hele sitet og videoen her..</a></p>
+        </div>
+        <div class="grid2_container">
+            <img src="img/idabrockmann.webp" width="600" height="600" alt="">
+        </div>
+
+        <div class="grid2_container">
+            <img src="img/indhold_gammeltsite.webp" width="600" height="600" alt="">
+        </div>
+        <div class="grid2_text">
+            <p>04. Grundlæggende indhold, "Blomstersøstrene"</p>
+            <h2>Hendes gamle site</h2>
+            <h3>→ Hvordan så det ud før & fungerede det?</h3>
+            <p>Så kom den "rigtige" opgave. Inden vi startede handlede det om, at vi skulle researche og teste hendes gamle site Vi brugte BERT, 5-sekunders & tænke-højt. 
+            </p>
+            <p><a href="https://xn--blomstersstrene-eub.dk/" target="_blank">Se hendes gamle site her..</a></p>
+        </div>
+
+        <div class="grid2_text">
+            <p>04. Grundlæggende indhold, "Blomstersøstrene"</p>
+            <h2>Hele vores process</h2>
+            <h3>→ Hvordan kom vi frem til det endelige resultat?</h3>
+            <p>Vi brugte en del tid på at diskutere, og lave moodboards/protoyper, inden vi kom frem til vores resultat. Vi lavede allesammen en del af koden, og vi lavede også en
+            video til forsiden, som "hero"-element.
+            </p>
+        </div>
+        <div class="grid2_container">
+            <img src="img/indhold_mockup.webp" width="600" height="600" alt="">
+        </div>
+
+        <div class="grid2_container">
+            <video autoplay muted loop playsinline class="header-video">
+                <source src="https://lineheight.dk/kea/06_portfolio/blomstersostrene_mockup.mp4" type="video/mp4" />
+            </video>
+        </div>
+        <div class="grid2_text">
+            <p>04. Grundlæggende indhold, "Blomstersøstrene"</p>
+            <h2>Det færdige resultat</h2>
+            <h3>→ Hvordan ser det ud responsivt?</h3>
+            <p>Det var vigtigt for os, at sitet også fungerede på mobilen, da mange bruger telefonen mere end computeren
+                efterhånden. Vi tog også tests efter, og generelt var svarende allerede meget bedre, og hun vil gerne bruge det nye site vi lavede til hende. 
+            </p>
+            <p><a href="https://line562a.github.io/blomstersoestrene/" target="_blank">Se sitet i alle størrelser her..</a></p>
+        </div>
     </div>
 </main>
 
