--- a/animation.html
+++ b/animation.html
@@ -35,8 +35,9 @@
             <img src="img/peeace_mockup.webp" width="600" height="600" alt="iPhone mockup med Peaace">
         </div>
         <div class="grid2_text">
+            <p>03. Grundlæggende animation</p>
             <h2>Hvor har jeg fundet inspiration?</h2>
-            <h3>Designer & illustrator Peeace</h3>
+            <h3>→ Designer & illustrator Peeace</h3>
             <p>På dette tema skulle vi vælge en stil vi skulle basere vores spil på. Jeg valgte en artist jeg fandt på Instagram/Dribbble, som hedder Peeace. 
             Han laver en del fine og retro designs med gode kontrastfarver og et budskab. Jeg synes det passede rigtig fint, til den vibe jeg gerne ville bruge.
             </p>
@@ -44,13 +45,26 @@
         </div>
 
         <div class="grid2_text">
+            <p>03. Grundlæggende animation</p>
             <h2>Skitser & start-fasen</h2>
-            <h3>Tegnet i ProCreate på iPad</h3>
+            <h3>→ Tegnet i ProCreate på iPad</h3>
             <p>Det hele startede således ud, og derefter blev det konveret direkte til Illustrator, hvor jeg så rentegnede alle elementerne, som skulle bruges i spillet.
             </p>
         </div>
         <div class="grid2_container">
             <img src="img/animation_skitser.webp" width="1000" height="600" alt="iPhone mockup med Peaace">
+        </div>
+        <div class="grid2_container">
+            <img src="img/animation_mockup.webp" width="1000" height="600" alt="iPhone mockup med Peaace">
+        </div>
+        <div class="grid2_text">
+            <p>03. Grundlæggende animation</p>
+            <h2>Det færdige resultat</h2>
+            <h3>→ Med alle spilleelementerne implementeret</h3>
+            <p>Spillet endte således. Det  var blevet meget som jeg havde forestillet mig fra starten af, og meget det udtryk jeg gik efter.
+            Ret lyse og pastelfarver, som matcher meget til påske.
+            </p>
+            <p><a href="https://lineheight.dk/kea/04_animation/spil/spil.html" target="_blank">Prøv spillet her..</a></p>
         </div>
     </div>
 </main>
