--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     
         <div class="grid1_text">
             <h2>Grundlæggende web.</h2>
-            <h3>1. Semester, KEA København.</h3>
+            <h3>→ 1. Semester, KEA København.</h3>
             <p>På første tema, skulle vi starte med et meget simpel website, hvor layoutet allerede var bestemt for os.
             Vi fik tildelt en stil, som vi skulle følge, og vi kunne selv bestemme emne, farver og billedestil.
             </p>
@@ -61,7 +61,7 @@
         </div>
         <div class="grid1_text2">
             <h2>Grundlæggende UX.</h2>
-            <h3>1. Semester, KEA København.</h3>
+            <h3>→ 1. Semester, KEA København.</h3>
             <p>På dette tema skulle vi designe en webshop som skulle sælge t-shirts. Vi havde helt frier tøjler med
                 design og idé.
                 Vi skulle arbejde med en masse forskellige sketch-metoder, tests af prototyper, og fremlægge vores
@@ -76,7 +76,7 @@
         </div>
         <div class="grid1_text">
             <h2>Grundlæggende animation.</h2>
-            <h3>1. Semester, KEA København.</h3>
+            <h3>→ 1. Semester, KEA København.</h3>
             <p>3. tema blev en smule mere kompliceret og indviklet. Det var første gang vi skulle rodde med JavaScript.
                 Vi skulle kode et simpelt spil.
                 Selve emnet omkring spillet og stilen var op til os, men vi skulle selv tegne alt grafik. Vi skulle også
@@ -91,7 +91,7 @@
         </div>
         <div class="grid1_text2">
             <h2>Grundlæggende indhold.</h2>
-            <h3>1. Semester, KEA København.</h3>
+            <h3>→ 1. Semester, KEA København.</h3>
             <p>Her startede vores første "store gruppeopgave". Vi skulle også for første gang lave noget for en virkelig
                 virksomhed. Vi skulle
                 redesigne en allerede lavet hjemmeside, som måske godt kunne trænge til noget nyt og friskt. Vi skulle
