--- a/web.html
+++ b/web.html
@@ -32,6 +32,35 @@
 </header>
 
 <main>
+    <div class="grid2">
+        <div class="grid2_container">
+            <div class="grid2_container">
+                <img src="img/web_moodboard.webp" width="600" height="600" alt="iPhone mockup med Peaace">
+            </div>
+        </div>
+        <div class="grid2_text">
+            <p>01. Grundlæggende web</p>
+            <h2>Moodboard & stil</h2>
+            <h3>→ Fastlagt layout med selvvalgt emne</h3>
+            <p>Vi fik tilfældigt tildelt en stil, og jeg endte med "Retro Game"-stil, og udfra det, lavede jeg dette moodboard, hvor det meste af min inspiration kom fra.
+            </p>
+        </div>
+
+        <div class="grid2_text">
+            <p>01. Grundlæggende web</p>
+            <h2>Det færdige site</h2>
+            <h3>→ Hvordan jeg stylede det allerede fastlagte layout</h3>
+            <p>På baggrund af den stilart jeg blev tildelt, og hvad jeg synes passede til mit selvvalgte emne, endte det sådan her. 
+            </p>
+            <p><a href="https://lineheight.dk/kea/02_web/04_responsive/responsive_v2/" target="_blank">Se det færdige site her..</a></p>
+        </div>
+        <div class="grid2_container">
+            <video autoplay muted loop playsinline class="header-video">
+                <source src="https://lineheight.dk/kea/06_portfolio/01web_mockup.mp4" type="video/mp4" />
+            </video>
+        </div>
+
+    </div>
 </main>
 <footer>
 </footer>
