--- a/animation.html
+++ b/animation.html
@@ -52,10 +52,10 @@
             </p>
         </div>
         <div class="grid2_container">
-            <img src="img/animation_skitser.webp" width="1000" height="600" alt="iPhone mockup med Peaace">
+            <img src="img/animation_skitser.webp" width="1000" height="600" alt="Skitser inden jeg gik igang med grafikken">
         </div>
         <div class="grid2_container">
-            <img src="img/animation_mockup.webp" width="1000" height="600" alt="iPhone mockup med Peaace">
+            <img src="img/animation_mockup.webp" width="1000" height="600" alt="Computer mockup af spillet">
         </div>
         <div class="grid2_text">
             <p>03. Grundlæggende animation</p>
