--- a/indhold.html
+++ b/indhold.html
@@ -42,11 +42,11 @@
             <p><a href="https://line562a.github.io/pilotsite/" target="_blank">Se hele sitet og videoen her..</a></p>
         </div>
         <div class="grid2_container">
-            <img src="img/idabrockmann.webp" width="600" height="600" alt="">
+            <img src="img/idabrockmann.webp" width="600" height="600" alt="Computer mockup pilotsite med Ida Brockmann om marmorering">
         </div>
 
         <div class="grid2_container">
-            <img src="img/indhold_gammeltsite.webp" width="600" height="600" alt="">
+            <img src="img/indhold_gammeltsite.webp" width="600" height="600" alt="Computer mockup Blomstersøstrenes gamle website">
         </div>
         <div class="grid2_text">
             <p>04. Grundlæggende indhold, "Blomstersøstrene"</p>
@@ -66,7 +66,7 @@
             </p>
         </div>
         <div class="grid2_container">
-            <img src="img/indhold_mockup.webp" width="600" height="600" alt="">
+            <img src="img/indhold_mockup.webp" width="600" height="600" alt="Et moodboard med inspiration og farver som vi brugte inden vi gik igang med selve arbejdet">
         </div>
 
         <div class="grid2_container">
