--- a/web.html
+++ b/web.html
@@ -35,7 +35,7 @@
     <div class="grid2">
         <div class="grid2_container">
             <div class="grid2_container">
-                <img src="img/web_moodboard.webp" width="600" height="600" alt="iPhone mockup med Peaace">
+                <img src="img/web_moodboard.webp" width="600" height="600" alt="Moordboard/collage af inspiration jeg hentede, inden jeg gik igang med at designe">
             </div>
         </div>
         <div class="grid2_text">
