--- a/animation.html
+++ b/animation.html
@@ -70,6 +70,10 @@
 </main>
 
 <footer>
+    <div class="footer_text">
+        <h3>©Lineheight.dk</h3>
+        <p>Indholdet på dette website er ophavsretligt beskyttet og tilhører Lineheight/Line Jespersen.</p>
+    </div>
 </footer>
 
 <script src="js/script.js"></script>
