--- a/ommig.html
+++ b/ommig.html
@@ -30,24 +30,27 @@
 </header>
 
 <div class="intro">
-    <div class="profilbillede"><img src="img/emoji1.png" height="600" width="600" alt="Line Holm Ræbild Jespersen, multimediedesigner studerende på KEA, 1. semester">
+    <div class="profilbillede"><img src="img/emoji1.webp" height="600" width="600" alt="Line Holm Ræbild Jespersen, multimediedesigner studerende på KEA, 1. semester">
     </div>
     <div class="intro_text">
         <p>Hejsa, mit navn er</p>
         <h1>Line Holm Jespersen</h1>
         <h2>22 årig studerende fra KEA, som er begejstret for design & grafik - velkommen til!</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum justo quis mi tempor, eget 
-        sodales nisl consequat. Fusce semper nulla eu ex venenatis volutpat. Maecenas a fringilla leo. Proin est augue, 
-        condimentum blandit sem vitae, porttitor ultricies dolor. Maecenas a fringilla leo. Proin est augue,
-        condimentum blandit sem vitae, porttitor ultricies dolor.
+        <p>Jeg er næsten færdig med mit 1. semester på KEA. Jeg har inden KEA taget mediegrafikeruddannelsen på NEXT, som er en erhvervsuddannelse, og derfor har jeg fået en smule
+            erhvervserfaring, da jeg var elev hos Politiken og Sjællandske Medier. Jeg havde en forholdsvis træls skolegang på NEXT, og derfor har det været super rart, at komme
+            til en skole, hvor der er mere struktur og "selvmotivation" til studie. 
         </p>
-        <a href="https://www.facebook.com/linehrjespersen" target="_blank"><img class="icons" src="img/facebook.svg" width="20" height="20" alt=""></a>
-        <a href="https://www.instagram.com/linejesper/" target="_blank"><img class="icons" src="img/instagram.svg" width="20" height="20" alt=""></a>
-        <a href="https://www.linkedin.com/in/line-h-437bba123/" target="_blank"><img class="icons" src="img/linkedin.svg" width="20" height="20" alt=""></a>
+        <a href="https://www.facebook.com/linehrjespersen" target="_blank"><img class="icons" src="img/facebook.svg" width="20" height="20" alt="Facebook logo"></a>
+        <a href="https://www.instagram.com/linejesper/" target="_blank"><img class="icons" src="img/instagram.svg" width="20" height="20" alt="Instagram logo"></a>
+        <a href="https://www.linkedin.com/in/line-h-437bba123/" target="_blank"><img class="icons" src="img/linkedin.svg" width="20" height="20" alt="Linkedin logo"></a>
     </div>
 </div>
 
 <footer>
+    <div class="footer_text">
+        <h3>©Lineheight.dk</h3>
+        <p>Indholdet på dette website er ophavsretligt beskyttet og tilhører Lineheight/Line Jespersen.</p>
+    </div>
 </footer>
 
 <script src="js/script.js"></script>
