--- a/ux.html
+++ b/ux.html
@@ -30,11 +30,50 @@
 </header>
 
 <main>
-    <div class="hero">
+    <div class="grid2">
+        <div class="grid2_text">
+            <p>02. Grundlæggende UX</p>
+            <h2>Konceptudvikling & valg af målgrupper</h2>
+            <h3>→ Til virksomheder</h3>
+            <p>Hele dette projekt omhandlede mere omkring at designe efter en bestemt målgruppe, som man selv havde fastlagt. Der var intet kodning.
+            </p>
+        </div>
+        <div class="grid2_container">
+            <img src="img/ux_styletile.webp" width="600" height="600" alt="Styletile til mit UX-projekt omkring salg af t-shirts">
+        </div>
+
+        <div class="grid2_container">
+            <img src="img/ux_mockup.webp" width="600" height="600" alt="Computer mockup af UX website">
+        </div>
+        <div class="grid2_text">
+            <p>02. Grundlæggende UX</p>
+            <h2>Fastlægge styletile udfra målgruppen</h2>
+            <h3>→ Planlægge billedestil og styletile</h3>
+            <p>Min målgruppe var virksomheder, som deltog i større aktivitetsevents/teambuilding, og som gerne vil fremstå bæredygtige og miljøbeviste.
+            </p>
+            <p><a href="https://xd.adobe.com/view/4a1db0b0-ee0f-43ef-8a7e-de74357832f0-1f4e/" target="_blank">Se hele prototypen her..</a></p>
+        </div>
+        <div class="grid2_text">
+            <p>02. Grundlæggende UX</p>
+            <h2>Fremlæggelse af pitch</h2>
+            <h3>→ Feedback og ændringer</h3>
+            <p>Her skulle vi også teste vores prototype sammen med andre studerende, og også fremlægge sitet for dem til sidst. Det gav en virkelig
+            god feedbackprocess.
+            </p>
+            <p><a href="https://lineheight.dk/kea/06_portfolio/03.03.02_uxpitchdeck_linejespersen.pdf" target="_blank">Se hele pitchen her..</a></p>
+
+        </div>
+        <div class="grid2_container">
+            <img src="img/presentation_mockup.webp" width="600" height="600" alt="Min UX-pitch">
+        </div>
     </div>
 </main>
 
 <footer>
+    <div class="footer_text">
+        <h3>©Lineheight.dk</h3>
+        <p>Indholdet på dette website er ophavsretligt beskyttet og tilhører Lineheight/Line Jespersen.</p>
+    </div>
 </footer>
 
 <script src="js/script.js"></script>
