--- a/indhold.html
+++ b/indhold.html
@@ -87,6 +87,10 @@
 </main>
 
 <footer>
+    <div class="footer_text">
+        <h3>©Lineheight.dk</h3>
+        <p>Indholdet på dette website er ophavsretligt beskyttet og tilhører Lineheight/Line Jespersen.</p>
+    </div>
 </footer>
 
 <script src="js/script.js"></script>
