--- a/web.html
+++ b/web.html
@@ -62,7 +62,12 @@
 
     </div>
 </main>
+
 <footer>
+    <div class="footer_text">
+        <h3>©Lineheight.dk</h3>
+        <p>Indholdet på dette website er ophavsretligt beskyttet og tilhører Lineheight/Line Jespersen.</p>
+    </div>
 </footer>
 
 <script src="js/script.js"></script>
